Throw the generated Exception new Byte => Byte.valueOf
git-svn-id: https://svn-us.apache.org/repos/asf/commons/proper/jexl/branches/2.0@798628 13f79535-47bb-0310-9956-ffa450edef68